test/spec_vectors/func/fail/module_23.wat
(module (func $type-param-num-vs-num (param f32) (i32.eqz (local.get 0))))